refactor: 변경된 리소스 읽기 로직 반영